# md2ltx

./: .gitignore  MANIFEST.in  README.md  local_upgrade.py  local_upgrade.sh  main.py  publish.py  pyproject.toml  setup.cfg  test.py  upload.py  upload.sh
app/: __init__.py  constants.py  main.py  python_evaluation.py  requirements.txt
lib/: help_lib.py
src/md2ltx/: main.py
src/md2ltx/lib/: constants.py  python_evaluation.py  string_lib.py
tests/manual_tests/: test_compile_markdown_to_pdf.py  test_evaluate_python_in_markdown_string.py
