[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2ltx"
version = "0.0.67"
description = "A tool for browsing and manipulating CSV files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Ryan Gerard Wilson", email = "ryan@wilsonfamilyoffice.com" }
]

dependencies = [
  "numpy",
  "pandas",
  "rgwfuncs",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://ryangerardwilson.com"
Issues   = "https://ryangerardwilson.com/contact"

[project.entry-points."console_scripts"]
md2ltx = "md2ltx.app.main:main"
