[metadata]
name = md2ltx
version = 0.0.2
author = Ryan Gerard Wilson
author_email = info@ryangerardwilson.com
description = Convert Markdown (.md) files to PDF ...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryangerardwilson/md2ltx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
install_requires =
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    md2ltx = md2ltx.main:main

